figdir = figures
docname = system-admin-guide
lang = C
omffile = system-admin-guide-C.omf
entities = appendixa.xml \
	   gconf.xml \
	   glossary.xml \
	   legal.xml \
	   menustructure.xml \
	   mimetypes.xml \
	   gdm.xml \
	   performance.xml \
	   screensavers.xml \
	   gdm.xml \
	   sessions.xml \
	   help.xml \
	   themes.xml

include $(top_srcdir)/xmldocs.make
dist-hook: app-dist-hook

