docname = system-admin-guide
lang = C
omffile = system-admin-guide-C.omf
entities =			\
	appendixa.xml		\
	appendixb.xml		\
	fontconfig.xml		\
	gconf.xml		\
	glossary.xml		\
	help.xml		\
	legal.xml		\
	lockdown.xml		\
	menustructure.xml	\
	mimetypes.xml		\
	performance.xml		\
	screensavers.xml	\
	sessions.xml		\
	themes.xml

include $(top_srcdir)/xmldocs.make
dist-hook: app-dist-hook

