docname = gnome-users-guide
lang = it
omffile = gnome-users-guide-it.omf
include $(top_srcdir)/sgmldocs.make
dist-hook: app-dist-hook
sgml_ents = \
	authors.sgml		\
	desktop.sgml		\
	fdl.sgml		\
	gmenu.sgml		\
	gnomecc.sgml		\
	gpl-appendix.sgml	\
	unix-primer.sgml	\
	ug-applets.sgml		\
	wheeler.sgml		\
	wms.sgml
figs = 
